welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	if (a>=13 && a<=19){
		if (b>=13 && b<=19){return false}
		else {return true}
	}
}
